# FastAPI

./: Dockerfile  README  README.md  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 5b111a891739_create_users_table.py  b9f32c56ce3e_initial_migration.py  d67cc13c093f_description_of_changes.py  f9a007765a85_cria_tabela_todos.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py
